add yufan's annotated paper 1 && add agumented paper 2

--- a/data_aug_test.ipynb
+++ b/data_aug_test.ipynb
@@ -16,20 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python ('cmu-11711')' requires ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'conda install -n cmu-11711 ipykernel --update-deps --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import openai\n",
@@ -57,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,11 +59,11 @@
       "      \"finish_reason\": \"stop\",\n",
       "      \"index\": 0,\n",
       "      \"logprobs\": null,\n",
-      "      \"text\": \"\\n\\nThe 2018 Association for Computational Linguistics1Privacy is committed to preserving neural representations of data.\"\n",
+      "      \"text\": \"\\n\\nThe Association for Computational Linguistics is dedicated to preserving the privacy of neural representations in 2018.\"\n",
       "    }\n",
       "  ],\n",
-      "  \"created\": 1666159249,\n",
-      "  \"id\": \"cmpl-62wQDD518nLMjRJaH2Np7fXBA8uHY\",\n",
+      "  \"created\": 1666159667,\n",
+      "  \"id\": \"cmpl-62wWx4tIF9PUuiKg9aYILf4r5RjR1\",\n",
       "  \"model\": \"text-davinci-002\",\n",
       "  \"object\": \"text_completion\",\n",
       "  \"usage\": {\n",
@@ -103,14 +92,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'openapi_schema_to_json_schema'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m/Users/yennifer/Desktop/2022_fall/nlp/End-to-End-Scientific-Entity-Recognition/data_aug_test.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yennifer/Desktop/2022_fall/nlp/End-to-End-Scientific-Entity-Recognition/data_aug_test.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mjson\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/yennifer/Desktop/2022_fall/nlp/End-to-End-Scientific-Entity-Recognition/data_aug_test.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mopenapi_schema_to_json_schema\u001b[39;00m \u001b[39mimport\u001b[39;00m to_json_schema\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yennifer/Desktop/2022_fall/nlp/End-to-End-Scientific-Entity-Recognition/data_aug_test.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m response_json \u001b[39m=\u001b[39m to_json_schema(response)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/yennifer/Desktop/2022_fall/nlp/End-to-End-Scientific-Entity-Recognition/data_aug_test.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(response_json\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mchoices\u001b[39m\u001b[39m\"\u001b[39m)[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mstrip())\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'openapi_schema_to_json_schema'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Association for Computational Linguistics is dedicated to preserving the privacy of neural representations in 2018.\n"
      ]
     }
    ],
@@ -130,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,9 +132,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already augemented files: {'aug_annotated_2018_emnlp_Privacy-preserving Neural Representations of Text.txt'}\n",
+      "Total Augmented File Cnt: 0\n",
+      "Augmenting aug_annotated_2022_acl_UniTranSeR A Unified Transformer Semantic Representation Framework for Multimodal Task-Oriented Dialog System.txt...\n",
+      "Paraphrase and relabelling from OpenAI...\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mADG\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata_aug\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Desktop/2022_fall/nlp/End-to-End-Scientific-Entity-Recognition/annotated_data_augmenter.py:98\u001b[0m, in \u001b[0;36mAnnotatedDataAug.data_aug\u001b[0;34m(self, raw_dir, aug_dir)\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m     97\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mParaphrase and relabelling from OpenAI...\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 98\u001b[0m sentences, sentenceIdx_to_tokenLabelDict \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrecover_and_label(raw_dir \u001b[39m+\u001b[39;49m file)\n\u001b[1;32m     99\u001b[0m paraphrased_result_lines \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mparapharase_and_relabel(sentences, sentenceIdx_to_tokenLabelDict)\n\u001b[1;32m    101\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mWrite the result to file...\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/Desktop/2022_fall/nlp/End-to-End-Scientific-Entity-Recognition/annotated_data_augmenter.py:46\u001b[0m, in \u001b[0;36mAnnotatedDataAug.recover_and_label\u001b[0;34m(self, annotated_tokenized_paper)\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[39mfor\u001b[39;00m idx, token_label \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(lines):\n\u001b[1;32m     43\u001b[0m     \u001b[39mif\u001b[39;00m token_label \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m:\n\u001b[1;32m     44\u001b[0m         \u001b[39m# if split point\u001b[39;00m\n\u001b[1;32m     45\u001b[0m         \u001b[39m# add the period \".\" manually (always make sure there is a period at the end)\u001b[39;00m\n\u001b[0;32m---> 46\u001b[0m         \u001b[39mif\u001b[39;00m cur_sentence[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m] \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m     47\u001b[0m             cur_sentence\u001b[39m.\u001b[39mappend(\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     48\u001b[0m         sentences\u001b[39m.\u001b[39mappend(\u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(cur_sentence))\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "ADG.data_aug()"
    ]
@@ -157,7 +166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python ('cmu-11711')",
+   "display_name": "Python 3.8.13 ('cmu-11711')",
    "language": "python",
    "name": "python3"
   },
@@ -171,12 +180,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": ""
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "25a19fbe0a9132dfb9279d48d161753c6352f8f9478c2e74383d340069b907c3"
+    "hash": "b3cc27bd2b0cc244489d64415057549f3bf07f3859f5feb365772e94fdd42b37"
    }
   }
  },
