--- a/data_aug_test.ipynb
+++ b/data_aug_test.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,35 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"choices\": [\n",
-      "    {\n",
-      "      \"finish_reason\": \"stop\",\n",
-      "      \"index\": 0,\n",
-      "      \"logprobs\": null,\n",
-      "      \"text\": \"\\n\\nThe Association for Computational Linguistics is dedicated to preserving the privacy of neural representations in 2018.\"\n",
-      "    }\n",
-      "  ],\n",
-      "  \"created\": 1666159667,\n",
-      "  \"id\": \"cmpl-62wWx4tIF9PUuiKg9aYILf4r5RjR1\",\n",
-      "  \"model\": \"text-davinci-002\",\n",
-      "  \"object\": \"text_completion\",\n",
-      "  \"usage\": {\n",
-      "    \"completion_tokens\": 22,\n",
-      "    \"prompt_tokens\": 24,\n",
-      "    \"total_tokens\": 46\n",
-      "  }\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(response)"
    ]
@@ -88,17 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Association for Computational Linguistics is dedicated to preserving the privacy of neural representations in 2018.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "from openapi_schema_to_json_schema import to_json_schema\n",
@@ -115,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,36 +98,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already augemented files: {'aug_annotated_2018_emnlp_Privacy-preserving Neural Representations of Text.txt'}\n",
+      "Already augemented files: {'aug_annotated_2018_emnlp_Privacy-preserving Neural Representations of Text.txt', 'aug_annotated_2022_acl_UniTranSeR A Unified Transformer Semantic Representation Framework for Multimodal Task-Oriented Dialog System.txt'}\n",
       "Total Augmented File Cnt: 0\n",
       "Augmenting aug_annotated_2022_acl_UniTranSeR A Unified Transformer Semantic Representation Framework for Multimodal Task-Oriented Dialog System.txt...\n",
+      "Already Parsed, Skip the annotated paper annotated_2022_acl_UniTranSeR A Unified Transformer Semantic Representation Framework for Multimodal Task-Oriented Dialog System.txt\n",
+      "Total Augmented File Cnt: 0\n",
+      "Augmenting aug_.DS_Store...\n",
       "Paraphrase and relabelling from OpenAI...\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
+     "ename": "UnicodeDecodeError",
+     "evalue": "'utf-8' codec can't decode byte 0xff in position 1208: invalid start byte",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mADG\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata_aug\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mADG\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata_aug\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
       "File \u001b[0;32m~/Desktop/2022_fall/nlp/End-to-End-Scientific-Entity-Recognition/annotated_data_augmenter.py:98\u001b[0m, in \u001b[0;36mAnnotatedDataAug.data_aug\u001b[0;34m(self, raw_dir, aug_dir)\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m     97\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mParaphrase and relabelling from OpenAI...\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 98\u001b[0m sentences, sentenceIdx_to_tokenLabelDict \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrecover_and_label(raw_dir \u001b[39m+\u001b[39;49m file)\n\u001b[1;32m     99\u001b[0m paraphrased_result_lines \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mparapharase_and_relabel(sentences, sentenceIdx_to_tokenLabelDict)\n\u001b[1;32m    101\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mWrite the result to file...\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/Desktop/2022_fall/nlp/End-to-End-Scientific-Entity-Recognition/annotated_data_augmenter.py:46\u001b[0m, in \u001b[0;36mAnnotatedDataAug.recover_and_label\u001b[0;34m(self, annotated_tokenized_paper)\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[39mfor\u001b[39;00m idx, token_label \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(lines):\n\u001b[1;32m     43\u001b[0m     \u001b[39mif\u001b[39;00m token_label \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m:\n\u001b[1;32m     44\u001b[0m         \u001b[39m# if split point\u001b[39;00m\n\u001b[1;32m     45\u001b[0m         \u001b[39m# add the period \".\" manually (always make sure there is a period at the end)\u001b[39;00m\n\u001b[0;32m---> 46\u001b[0m         \u001b[39mif\u001b[39;00m cur_sentence[\u001b[39m-\u001b[39;49m\u001b[39m1\u001b[39;49m] \u001b[39m!=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m     47\u001b[0m             cur_sentence\u001b[39m.\u001b[39mappend(\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     48\u001b[0m         sentences\u001b[39m.\u001b[39mappend(\u001b[39m\"\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(cur_sentence))\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "File \u001b[0;32m~/Desktop/2022_fall/nlp/End-to-End-Scientific-Entity-Recognition/annotated_data_augmenter.py:38\u001b[0m, in \u001b[0;36mAnnotatedDataAug.recover_and_label\u001b[0;34m(self, annotated_tokenized_paper)\u001b[0m\n\u001b[1;32m     36\u001b[0m sentenceIdx_to_tokenLabelDict \u001b[39m=\u001b[39m {} \u001b[39m# map the index of the sentence to the corresponding token->label dict\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(annotated_tokenized_paper) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m---> 38\u001b[0m     lines \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39;49mreadlines()\n\u001b[1;32m     39\u001b[0m     \u001b[39m# cur maintainer\u001b[39;00m\n\u001b[1;32m     40\u001b[0m     cur_dict \u001b[39m=\u001b[39m {}\n",
+      "File \u001b[0;32m~/miniforge3/envs/cmu-11711/lib/python3.8/codecs.py:322\u001b[0m, in \u001b[0;36mBufferedIncrementalDecoder.decode\u001b[0;34m(self, input, final)\u001b[0m\n\u001b[1;32m    319\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecode\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m, final\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m):\n\u001b[1;32m    320\u001b[0m     \u001b[39m# decode input (taking the buffer into account)\u001b[39;00m\n\u001b[1;32m    321\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuffer \u001b[39m+\u001b[39m \u001b[39minput\u001b[39m\n\u001b[0;32m--> 322\u001b[0m     (result, consumed) \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_buffer_decode(data, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49merrors, final)\n\u001b[1;32m    323\u001b[0m     \u001b[39m# keep undecoded input until the next call\u001b[39;00m\n\u001b[1;32m    324\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuffer \u001b[39m=\u001b[39m data[consumed:]\n",
+      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0xff in position 1208: invalid start byte"
      ]
     }
    ],
    "source": [
     "ADG.data_aug()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
