update agued cleaned data, now we have 13 papers

--- a/data_aug_test.ipynb
+++ b/data_aug_test.ipynb
@@ -105,33 +105,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already augemented files: {'aug_annotated_2018_emnlp_Privacy-preserving Neural Representations of Text.txt', 'aug_annotated_2022_acl_UniTranSeR A Unified Transformer Semantic Representation Framework for Multimodal Task-Oriented Dialog System.txt'}\n",
+      "Already augemented files: {'aug_cleaned_annotated_2020_emnlp_Unsupervised stance detection for arguments from consequences.txt', 'aug_cleaned_annotated_2021_acl_DeepRapper Neural Rap Generation with Rhyme and Rhythm Modeling.txt', 'aug_cleaned_annotated_2015_acl_Addressing the Rare Word Problem in Neural Machine Translation.txt', 'aug_cleaned_annotated_2017_acl_Neural Relation Extraction with Multi-lingual Attention.txt', 'aug_cleaned_annotated_2021_emnlp_Zero-Shot Cross-Lingual Transfer of Neural Machine Translation with Multilingual Pretrained Encoders.txt', 'aug_cleaned_annotated_2018_naacl_A Deep Generative Model of Vowel Formant Typology.txt', 'aug_cleaned_annotated_2018_emnlp_Privacy-preserving Neural Representations of Text.txt', 'aug_cleaned_annotated_2018_acl_Probabilistic FastText for Multi-Sense Word Embeddings.txt', 'aug_cleaned_annotated_2022_acl_UniTranSeR A Unified Transformer Semantic Representation Framework for Multimodal Task-Oriented Dialog System.txt', '.DS_Store'}\n",
       "Total Augmented File Cnt: 0\n",
-      "Augmenting aug_annotated_2022_acl_UniTranSeR A Unified Transformer Semantic Representation Framework for Multimodal Task-Oriented Dialog System.txt...\n",
-      "Already Parsed, Skip the annotated paper annotated_2022_acl_UniTranSeR A Unified Transformer Semantic Representation Framework for Multimodal Task-Oriented Dialog System.txt\n",
+      "Augmenting aug_cleaned_annotated_2019_naacl_The emergence of number and syntax units in LSTM language models.txt...\n",
+      "Paraphrase and relabelling from OpenAI...\n",
+      "Write the result to file...\n",
       "Total Augmented File Cnt: 0\n",
-      "Augmenting aug_.DS_Store...\n",
-      "Paraphrase and relabelling from OpenAI...\n"
-     ]
-    },
-    {
-     "ename": "UnicodeDecodeError",
-     "evalue": "'utf-8' codec can't decode byte 0xff in position 1208: invalid start byte",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mADG\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdata_aug\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Desktop/2022_fall/nlp/End-to-End-Scientific-Entity-Recognition/annotated_data_augmenter.py:98\u001b[0m, in \u001b[0;36mAnnotatedDataAug.data_aug\u001b[0;34m(self, raw_dir, aug_dir)\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[39mcontinue\u001b[39;00m\n\u001b[1;32m     97\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mParaphrase and relabelling from OpenAI...\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 98\u001b[0m sentences, sentenceIdx_to_tokenLabelDict \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mrecover_and_label(raw_dir \u001b[39m+\u001b[39;49m file)\n\u001b[1;32m     99\u001b[0m paraphrased_result_lines \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mparapharase_and_relabel(sentences, sentenceIdx_to_tokenLabelDict)\n\u001b[1;32m    101\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mWrite the result to file...\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[0;32m~/Desktop/2022_fall/nlp/End-to-End-Scientific-Entity-Recognition/annotated_data_augmenter.py:38\u001b[0m, in \u001b[0;36mAnnotatedDataAug.recover_and_label\u001b[0;34m(self, annotated_tokenized_paper)\u001b[0m\n\u001b[1;32m     36\u001b[0m sentenceIdx_to_tokenLabelDict \u001b[39m=\u001b[39m {} \u001b[39m# map the index of the sentence to the corresponding token->label dict\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(annotated_tokenized_paper) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m---> 38\u001b[0m     lines \u001b[39m=\u001b[39m f\u001b[39m.\u001b[39;49mreadlines()\n\u001b[1;32m     39\u001b[0m     \u001b[39m# cur maintainer\u001b[39;00m\n\u001b[1;32m     40\u001b[0m     cur_dict \u001b[39m=\u001b[39m {}\n",
-      "File \u001b[0;32m~/miniforge3/envs/cmu-11711/lib/python3.8/codecs.py:322\u001b[0m, in \u001b[0;36mBufferedIncrementalDecoder.decode\u001b[0;34m(self, input, final)\u001b[0m\n\u001b[1;32m    319\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdecode\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m, final\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m):\n\u001b[1;32m    320\u001b[0m     \u001b[39m# decode input (taking the buffer into account)\u001b[39;00m\n\u001b[1;32m    321\u001b[0m     data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuffer \u001b[39m+\u001b[39m \u001b[39minput\u001b[39m\n\u001b[0;32m--> 322\u001b[0m     (result, consumed) \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_buffer_decode(data, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49merrors, final)\n\u001b[1;32m    323\u001b[0m     \u001b[39m# keep undecoded input until the next call\u001b[39;00m\n\u001b[1;32m    324\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mbuffer \u001b[39m=\u001b[39m data[consumed:]\n",
-      "\u001b[0;31mUnicodeDecodeError\u001b[0m: 'utf-8' codec can't decode byte 0xff in position 1208: invalid start byte"
+      "Augmenting aug_cleaned_annotated_2022_naacl_Language Model Augmented Monotonic Attention for Simultaneous Translation.txt...\n",
+      "Paraphrase and relabelling from OpenAI...\n",
+      "Write the result to file...\n",
+      "Total Augmented File Cnt: 0\n",
+      "Augmenting aug_cleaned_annotated_2021_naacl_Mediators in Determining what Processing BERT Performs First.txt...\n",
+      "Paraphrase and relabelling from OpenAI...\n",
+      "Write the result to file...\n",
+      "Total Augmented File Cnt: 0\n",
+      "Augmenting aug_cleaned_annotated_2019_naacl_BERT Pre-training of Deep Bidirectional Transformers for Language Understanding.txt...\n",
+      "Paraphrase and relabelling from OpenAI...\n",
+      "Write the result to file...\n",
+      "Total Augmented File Cnt: 0\n",
+      "Augmenting aug_cleaned_annotated_2015_acl_Addressing the Rare Word Problem in Neural Machine Translation.txt...\n",
+      "Already Parsed, Skip the annotated paper cleaned_annotated_2015_acl_Addressing the Rare Word Problem in Neural Machine Translation.txt\n",
+      "Total Augmented File Cnt: 0\n",
+      "Augmenting aug_cleaned_annotated_2021_emnlp_Zero-Shot Cross-Lingual Transfer of Neural Machine Translation with Multilingual Pretrained Encoders.txt...\n",
+      "Already Parsed, Skip the annotated paper cleaned_annotated_2021_emnlp_Zero-Shot Cross-Lingual Transfer of Neural Machine Translation with Multilingual Pretrained Encoders.txt\n",
+      "Total Augmented File Cnt: 0\n",
+      "Augmenting aug_cleaned_annotated_2018_naacl_A Deep Generative Model of Vowel Formant Typology.txt...\n",
+      "Already Parsed, Skip the annotated paper cleaned_annotated_2018_naacl_A Deep Generative Model of Vowel Formant Typology.txt\n",
+      "Total Augmented File Cnt: 0\n",
+      "Augmenting aug_cleaned_annotated_2018_emnlp_Privacy-preserving Neural Representations of Text.txt...\n",
+      "Already Parsed, Skip the annotated paper cleaned_annotated_2018_emnlp_Privacy-preserving Neural Representations of Text.txt\n",
+      "Total Augmented File Cnt: 0\n",
+      "Augmenting aug_cleaned_annotated_2017_acl_Neural Relation Extraction with Multi-lingual Attention.txt...\n",
+      "Already Parsed, Skip the annotated paper cleaned_annotated_2017_acl_Neural Relation Extraction with Multi-lingual Attention.txt\n",
+      "Total Augmented File Cnt: 0\n",
+      "Augmenting aug_cleaned_annotated_2020_emnlp_Unsupervised stance detection for arguments from consequences.txt...\n",
+      "Already Parsed, Skip the annotated paper cleaned_annotated_2020_emnlp_Unsupervised stance detection for arguments from consequences.txt\n",
+      "Total Augmented File Cnt: 0\n",
+      "Augmenting aug_cleaned_annotated_2022_acl_UniTranSeR A Unified Transformer Semantic Representation Framework for Multimodal Task-Oriented Dialog System.txt...\n",
+      "Already Parsed, Skip the annotated paper cleaned_annotated_2022_acl_UniTranSeR A Unified Transformer Semantic Representation Framework for Multimodal Task-Oriented Dialog System.txt\n",
+      "Total Augmented File Cnt: 0\n",
+      "Augmenting aug_cleaned_annotated_2018_acl_Probabilistic FastText for Multi-Sense Word Embeddings.txt...\n",
+      "Already Parsed, Skip the annotated paper cleaned_annotated_2018_acl_Probabilistic FastText for Multi-Sense Word Embeddings.txt\n",
+      "Total Augmented File Cnt: 0\n",
+      "Augmenting aug_cleaned_annotated_2021_acl_DeepRapper Neural Rap Generation with Rhyme and Rhythm Modeling.txt...\n",
+      "Already Parsed, Skip the annotated paper cleaned_annotated_2021_acl_DeepRapper Neural Rap Generation with Rhyme and Rhythm Modeling.txt\n"
      ]
     }
    ],
    "source": [
     "ADG.data_aug()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
